hphp/test/slow/error_handler/1372.php.expectf

Fatal error: Class undefined: Foo in %s on line 14
Error
